<resources>
    <string name="app_name">E-Majer</string>
    <string name="e_majer">E-Majer</string>

    <string name="home">Home</string>
    <string name="mading">Mading</string>
    <string name="account">Account</string>
    <string name="sign_in">Sign In</string>
    <string name="email_addre">Email Address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_pass">Forgot Password ?</string>
    <string name="i_m_a_new_u">I\'m a new user.</string>
    <string name="sign_up">Sign Up</string>
    <string name="nama_penggu">Nama Pengguna</string>
    <string name="confirm_pas">Confirm Password</string>
    <string name="kelas">Kode Kelas</string>
    <string name="already_hav">Already have an account ?.</string>
    <string name="masuk">Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="masuk_sebag">Masuk sebagai</string>
    <string name="pengurus_ke">Pengurus Kelas</string>
    <string name="anggota">Anggota</string>
    <string name="daftar_seba">Daftar sebagai</string>
    <string name="selamat_dat">Selamat Datang di E-Majer,</string>
    <string name="jumlah_uang">Jumlah Uang Kas</string>
    <string name="value_kas">Rp 452.500;-</string>
    <string name="muhammad_yu">Muhammad Yusril Amin</string>
    <string name="tif_b">TIF B</string>
    <string name="keluar">Keluar</string>
    <string name="bayar_kas">Bayar Kas</string>
    <string name="e_majer_pay">E-Majer Pay</string>
    <string name="data_barang">Data Barang</string>
    <string name="riwayat_tra">Riwayat Transaksi</string>
    <string name="sign_in1">Sign In</string>
    <string name="catatan_pen">Catatan Pengeluaran</string>
    <string name="jangan_lupa">Jangan Lupa bayar kas dan \nmengerjakan tugas !!!!</string>
    <string name="tentang_emajer">Aplikasi pembukuan gratis untuk memudahkan pembukuan kas kelas sehingga memudahkan bendahara untuk memanajemen keuangan sehingga data keuangan menjadi lebih terstruktur dan memudahkan membagi informasi seputar kelas</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>