<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <!-- background abu -->
    <View
        android:id="@+id/background_"
        android:layout_width="396dp"
        android:layout_height="666dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/bg_register" />

    <!-- Sign Up -->
    <TextView
        android:id="@+id/sign_up"
        android:layout_width="78dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="126dp"
        android:text="@string/sign_up"
        android:textAppearance="@style/sign_up"
        android:gravity="top" />

    <!-- Email Address -->
    <TextView
        android:id="@+id/email_addre"
        android:layout_width="99dp"
        android:layout_height="21dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="54dp"
        android:layout_marginTop="166dp"
        android:gravity="top"
        android:text="@string/email_addre"
        android:textAppearance="@style/email_addre" />

    <!-- field email -->
    <View
        android:id="@+id/field_email"
        android:layout_width="322dp"
        android:layout_height="46dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="54dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="195dp"
        android:background="@drawable/bg_input_email" />

    <!-- Nama Pengguna -->
    <TextView
        android:id="@+id/nama_penggu"
        android:layout_width="119dp"
        android:layout_height="21dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="54dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="253dp"
        android:text="@string/nama_penggu"
        android:textAppearance="@style/nama_penggu"
        android:gravity="top" />

    <!-- field nama pengguna -->
    <View
        android:id="@+id/field_nama_"
        android:layout_width="322dp"
        android:layout_height="46dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="54dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="283dp"
        android:background="@drawable/field_nama" />

    <!-- Password -->
    <TextView
        android:id="@+id/password"
        android:layout_width="68dp"
        android:layout_height="21dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="54dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="348dp"
        android:text="@string/password"
        android:textAppearance="@style/password"
        android:gravity="top" />

    <!-- field password -->
    <View
        android:id="@+id/field_passw"
        android:layout_width="322dp"
        android:layout_height="46dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="54dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="378dp"
        android:background="@drawable/field_passw" />

    <!-- Confirm Password -->
    <TextView
        android:id="@+id/confirm_pas"
        android:layout_width="128dp"
        android:layout_height="21dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="54dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="433dp"
        android:text="@string/confirm_pas"
        android:textAppearance="@style/confirm_pas"
        android:gravity="top" />

    <!-- field confirm password -->
    <View
        android:id="@+id/field_confi"
        android:layout_width="322dp"
        android:layout_height="46dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="54dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="463dp"
        android:background="@drawable/field_confi" />

    <!-- Kelas -->
    <TextView
        android:id="@+id/kelas"
        android:layout_width="38dp"
        android:layout_height="21dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="54dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="526dp"
        android:text="@string/kelas"
        android:textAppearance="@style/kelas"
        android:gravity="top" />

    <!-- field kelas -->
    <View
        android:id="@+id/field_kelas"
        android:layout_width="322dp"
        android:layout_height="46dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="54dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="556dp"
        android:background="@drawable/field_kelas" />

    <!-- button -->
    <View
        android:id="@+id/button"
        android:layout_width="322dp"
        android:layout_height="46dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="54dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="635dp"
        android:background="@drawable/bg_button_signin" />

    <!-- Sign Up -->
    <TextView
        android:id="@+id/btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="646dp"
        android:gravity="top"
        android:text="@string/sign_up"
        android:textAppearance="@style/sign_up" />

    <!-- Already have an account ?. Sign In -->
    <TextView
        android:id="@+id/already_hav"
        android:layout_width="241dp"
        android:layout_height="21dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="94dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="707dp"
        android:text="@string/already_hav"
        android:textAppearance="@style/already_hav"
        android:gravity="top" />



</RelativeLayout>