<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEBE10">

    <ImageView
        android:layout_width="428dp"
        android:layout_height="400dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-24dp"
        android:background="@drawable/logo2"/>

    <!-- Rectangle 1 -->
    <View
        android:id="@+id/rectangle_1"
        android:layout_width="428dp"
        android:layout_height="531dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="371dp"
        android:background="@drawable/rectangle1" />

    <!-- Masuk -->
    <TextView
        android:id="@+id/masuk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="83dp"
        android:layout_marginTop="419dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center_horizontal|top"
        android:text="@string/masuk"
        android:textAppearance="@style/masuk2" />

    <!-- Daftar -->
    <TextView
        android:id="@+id/daftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="278dp"
        android:layout_marginTop="419dp"
        android:gravity="center_horizontal|top"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/daftar"
        android:textAppearance="@style/daftar2" />

    <!-- Line 1 -->
    <View
        android:id="@+id/line_1"
        android:layout_width="389.5dp"
        android:layout_height="0.5dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="19dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="458dp"
        android:background="@drawable/line1" />

    <!-- Line 2 -->
    <View
        android:id="@+id/line_2"
        android:layout_width="198dp"
        android:layout_height="3dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="214dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="458dp"
        android:background="@drawable/line2" />

    <!-- Daftar sebagai -->
    <TextView
        android:id="@+id/daftar_seba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="486dp"
        android:gravity="top"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/daftar_seba"
        android:textAppearance="@style/daftar_seba" />

    <!-- Rectangle 7 -->
    <View
        android:id="@+id/rectangle_7"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="41dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="553dp"
        android:background="@drawable/rectangle7" />

    <!-- Pengurus kelas -->
    <TextView
        android:id="@+id/pengurus_ke"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="664dp"
        android:fontFamily="@font/lato"
        android:gravity="top"
        android:text="@string/pengurus_ke"
        android:textAppearance="@style/pengurus_ke" />

    <!-- icons8-user-64 1 -->
    <View
        android:id="@+id/icons8_user"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="74dp"
        android:layout_marginTop="571dp"
        android:background="@drawable/ic_person" />

    <!-- Rectangle 8 -->
    <View
        android:id="@+id/rectangle_8"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="236dp"
        android:layout_marginTop="553dp"
        android:background="@drawable/rectangle8" />

    <!-- Anggota -->
    <TextView
        android:id="@+id/anggota"
        android:layout_width="78dp"
        android:layout_height="26dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="273dp"
        android:layout_marginTop="664dp"
        android:fontFamily="@font/lato"
        android:gravity="top"
        android:text="@string/anggota"
        android:textAppearance="@style/anggota" />

    <!-- icons8-users-64 1 -->
    <View
        android:id="@+id/icons8_users"
        android:layout_width="94dp"
        android:layout_height="94dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="264dp"
        android:layout_marginTop="571dp"
        android:background="@drawable/ic_group" />

</RelativeLayout>