<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_pengurus_kelas">

    <!-- icons8-settings-48 1 -->
    <View
        android:id="@+id/icons8_sett"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="375dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="19dp"
        android:background="@drawable/ic_settings" />

    <!-- E-Majer -->
    <TextView
        android:id="@+id/e_majer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="33dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/e_majer"
        android:textAppearance="@style/e_majer"
        android:gravity="center_horizontal|top" />

    <!-- Selamat Datang di E-Majer, (nama user)! -->
    <TextView
        android:id="@+id/selamat_dat"
        android:layout_width="233dp"
        android:layout_height="18dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="33dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="51dp"
        android:text="@string/selamat_dat"
        android:textAppearance="@style/selamat_dat"
        android:gravity="top"
        />

    <!-- Rectangle 17 -->
    <View
        android:id="@+id/rectangle_17"
        android:layout_width="404dp"
        android:layout_height="207dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="12dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="12dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="85dp"
        android:background="@drawable/rectangle17" />

    <!-- Jumlah Uang Kas -->
    <TextView
        android:id="@+id/jumlah_uang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="33dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="102dp"
        android:fontFamily="@font/lato"
        android:text="@string/jumlah_uang"
        android:textAppearance="@style/jumlah_uang"
        android:gravity="top" />

    <!-- Value jumlah uang kas- -->
    <TextView
        android:id="@+id/value_kas"
        android:layout_width="134dp"
        android:layout_height="28dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="33dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="99dp"
        android:fontFamily="@font/lato"
        android:text="@string/value_kas"
        android:textAppearance="@style/value_kas"
        android:gravity="top" />

    <!-- Line 8 -->
    <View
        android:id="@+id/line_8"
        android:layout_width="366dp"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="33dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="33dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="146dp"
        android:background="@drawable/line8" />

    <!-- Rectangle 22 -->
    <View
        android:id="@+id/rectangle_2"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="165dp"
        android:background="@drawable/rectangle7" />

    <!-- icons8-wallet-64 1 -->
    <View
        android:id="@+id/icons8_wall"
        android:layout_width="24.66dp"
        android:layout_height="27.78dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="51dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="180dp"
        android:background="@drawable/icon8_wall" />




    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        app:menu="@menu/bottom_navigation"
        app:itemRippleColor="@android:color/transparent"
        app:itemIconSize="30dp"
        app:labelVisibilityMode="unlabeled"
        app:itemIconTint="@drawable/item_selector"/>
</RelativeLayout>
